# ya-service-bus

./: .gitignore  Cargo.toml  README.md
.ci/: pack-build.sh
.github/workflows/: release.yml  rust.yml
crates/data-limiter/: Cargo.toml
crates/data-limiter/src/: main.rs
crates/derive/: Cargo.toml
crates/proto/: Cargo.toml  build.rs
crates/proto/protos/: gsb_api.proto
crates/proto/src/: codec.rs  lib.rs
crates/router/: Cargo.toml  README.md
crates/router/debian/: service  ya-sb-router.conf
crates/router/examples/: broadcast.rs  echo_client.rs  echo_server.rs
crates/router/node_client/: index.js  package-lock.json  package.json
crates/router/src/: bin.rs  config.rs  connection.rs  dispatcher.rs  lib.rs  router.rs  tls.rs  web.rs
crates/router/src/connection/: reader.rs  writer.rs
crates/util/: Cargo.toml
crates/util/src/: futures.rs  lib.rs  tls.rs  writer.rs
examples/: test_actix_service.rs  test_async_aw.rs  test_chunk_sequence.rs  test_router_raw.rs
src/: actix_rpc.rs  connection.rs  error.rs  lib.rs  local_router.rs  remote_router.rs  router_error.rs  sequence.rs  serialization.rs  timeout.rs  typed.rs  untyped.rs
src/local_router/: into_actix.rs
tests/: test_streaming.rs
