[package]
name = "ya-service-bus"
version = "0.7.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/ya-service-bus"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description = "Golem Service Bus"

[features]
default = ["flex"]
flex = ["flexbuffers"]
json = ["serde_json"]
packet-trace-enable = ["ya-packet-trace/enable"]

[workspace.dependencies]
ya-sb-proto = { path = "crates/proto", version = "0.6.1" }
ya-sb-util = { path = "crates/util", version = "0.4.1", features = ["with-futures", 'with-writer'] }
ya-packet-trace = { git = "https://github.com/golemfactory/ya-packet-trace" }

actix = { version = "0.13", default-features = false }
actix-rt = "2.2"
actix-server = "2.2.0"
actix-service = "2.0.2"
anyhow = "1.0.40"
bitflags = "2.0.2"
bytes = "1.0"
chrono = "0.4.19"
env_logger = "0.10.0"
flexbuffers = "2"
futures = "0.3"
humantime = "2.1.0"
lazy_static = "1.4"
log = "0.4"
miniz_oxide = "0.7.1"
parking_lot = "0.12.1"
pin-project = "1.0.12"
prost = "0.11.8"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3.26"
thiserror = "1.0.9"
tokio = "1"
tokio-stream = "0.1.12"
tokio-util = "0.7"
url = "2.1.1"
semver = "1.0.17"
uuid = "1.3.0"

[dependencies]
ya-sb-proto = { workspace = true }
ya-sb-util = { workspace = true }
ya-packet-trace = { workspace = true }

actix = { workspace = true, features = ["macros"] }
flexbuffers = { workspace = true, optional = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
miniz_oxide = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "io-util", "signal"] }
tokio-util = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
actix-rt = "2.2"
async-stream = "0.2.0"
env_logger = "0.7"
serde_json = "1.0"
structopt = "0.3.5"
tokio-stream = "0.1.8"

[workspace]
members = ["crates/*"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
