[package]
name = "ya-service-bus"
version = "0.7.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/ya-service-bus"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description= "Golem Service Bus"

[features]
default = ["flex"]

flex = ["flexbuffers"]
json = ["serde_json"]
packet-trace-enable = ["ya-packet-trace/enable"]
tls = ['ya-sb-util/with-tls', 'rustls', 'tokio-rustls']

[dependencies]
ya-sb-proto = { version = "0.6.1", path = "crates/proto" }
ya-sb-util = { version = "0.4.1", features = ["with-futures", 'with-writer'], path = "crates/util" }
ya-packet-trace = "0.1.0"

actix = { version = "0.13", default-features = false, features = ["macros"] }
flexbuffers = { version = "2", optional = true }
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
miniz_oxide = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0.9"
tokio = { version = "1", features = ["net", "time", "io-util", "signal"] }
tokio-util = "0.7"
url = "2.1.1"
semver="0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

[dev-dependencies]
actix-rt = "2.2"
async-stream = "0.2.0"
env_logger = "0.7"
serde_json = "1.0"
structopt = "0.3.5"
tokio-stream = "0.1.8"

[workspace]
members = [ "crates/*" ]

[workspace.dependencies]
rustls = "0.23.5"
tokio-rustls = "0.26.0"
sha2="0.10.8"
hex = "0.4.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
