[package]
name = "ya-service-bus"
version = "0.7.3"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/ya-service-bus"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description = "Golem Service Bus"

[features]
default = ["flex"]
flex = ["flexbuffers"]
json = ["serde_json"]
packet-trace-enable = ["ya-packet-trace/enable"]
tls = ['ya-sb-util/with-tls', 'rustls', 'tokio-rustls']

[dependencies]
ya-sb-proto = { version = "0.6.2", path = "crates/proto" }
ya-sb-util = { version = "0.5.1", features = ["with-futures", 'with-writer'], path = "crates/util" }
ya-packet-trace = { workspace = true }
actix = { workspace = true, features = ["macros"] }
flexbuffers = { workspace = true, optional = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
miniz_oxide = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

tokio = { workspace = true, features = ["net", "time", "io-util", "signal"] }
tokio-util.workspace = true
url.workspace = true
semver={ workspace = true }
uuid = { workspace = true, features = ["v4"] }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

[dev-dependencies]
actix-rt = { workspace = true }
async-stream = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
tokio-stream = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
rustls = "0.22"
tokio-rustls = "0.25"
sha2="0.10.8"
hex = "0.4.3"
actix-rt = "2.2"
async-stream = "0.2.0"
env_logger = "0.7"
serde_json = "1.0"
structopt = "0.3.5"
tokio-stream = "0.1.8"
bytes = "1"
prost = "0.10"
thiserror = "1.0.9"
tokio="1"
tokio-util = "0.7"
url = "2.1.1"
actix = { version = "0.13", default-features = false }
actix-server = "2"
actix-service = "2"
actix_derive = "=0.6.0"
anyhow = "1.0"
bitflags = "1.2.1"
chrono = "0.4"
clap = "4.5.4"
flexbuffers = "2"
futures = "0.3"
humantime = "2.1.0"
lazy_static = "1.4"
log = "0.4.8"
miniz_oxide = "0.5"
parking_lot = "0.11.1"
prost-build = "0.10"
rand = "0.8"
ring = "0.17.8"
rustls-pemfile = "2.1.2"
semver = "0.11.0"
serde = "1.0"
serial_test = "2.0.0"
ubyte = "0.10.1"
uuid = "0.8.1"
ya-packet-trace = "0.1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
