[package]
name = "data-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.18.2", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "sync",
    "time",
    "rt",
    "net"
]}
structopt="0.3.26"
log="0.4.17"
dotenv = "0.15.0"
anyhow = "1.0.57"
env_logger = "0.9.0"
libc = "0.2.125"
futures = "0.3.21"