[package]
name = "data-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "sync",
    "time",
    "rt",
    "net"
]}
structopt="0.3"
log="0.4"
dotenv = "0.15"
anyhow = "1.0"
env_logger = "0.9"
libc = "0.2"
futures = "0.3"
rocket = "0.5.0-rc.2"
figment = "0.10"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"