[package]
name = "ya-sb-proto"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-service-bus/crates/proto"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description= "Golem Service Bus Protocol messages"

[features]
default = ["with-codec"]
with-codec = ['tokio-util', 'tokio']

[dependencies]
bytes = "1.0"
thiserror = "1.0.9"
prost = "0.7"
tokio-util = { version = "0.6", optional = true, features = ["codec"] }
tokio = { version = "1.6", optional = true, features = ["sync"] }
url="2.1.1"

[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
serial_test = "0.4.0"
