[package]
name = "ya-sb-proto"
version = "0.6.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/ya-service-bus/crates/proto"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description = "Golem Service Bus Protocol messages"

[features]
default = ["with-codec"]
with-codec = ['tokio-util', 'tokio']

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
tokio-util = { workspace = true, optional = true, features = ["codec"] }
tokio = { workspace = true, optional = true, features = ["sync"] }
url = { workspace = true }

[build-dependencies]
prost-build = "0.10"

[dev-dependencies]
serial_test = "2.0.0"
