[package]
name = "ya-sb-router"
version = "0.6.4"
description = "Service Bus Router"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-service-bus/crates/router"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "GPL-3.0"
edition = "2021"

[features]
default = []
tls = ['tokio-rustls', 'rustls', 'rustls-pemfile', 'sha2', "hex", 'ya-sb-util/with-tls']
bin = [
    'env_logger',
    'tokio/signal',
    'humantime',
    "log/release_max_level_debug",
    'clap/derive', "clap/env", "tls"
]

[lib]
name = "ya_sb_router"
path = "src/lib.rs"

[[bin]]
name = "ya-sb-router"
path = "src/bin.rs"
required-features = ['bin']

[dependencies]
ya-sb-proto = { version = "0.6", path = "../proto" }
ya-sb-util = { version = "0.5.1", features = ["with-writer"], path="../util" }
actix-rt = "2.2"
actix = { version = "0.13", default-features = false, features = ["macros"] }
actix-server = {  version = "2" }
actix-service = "2"
# Freeze actix_derive version, because switch to 0.6.1 violated semantic versioning.
actix_derive = "=0.6.0"

anyhow = "1.0"
chrono = "0.4"

futures = "0.3"
lazy_static = "1.4"
log = "0.4.8"
prost.workspace = true
tokio = { version = "1", features = ["net", "sync", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
parking_lot = "0.11.1"
bitflags = "1.2.1"
pin-project = "1.0.7"
humantime = { version = "2.1.0", optional = true }
env_logger = { version = "0.8", optional = true, default-features = false }
clap = { version = "4.5.4", optional = true }
tokio-rustls = {  workspace = true, optional = true }
rustls = { workspace = true , optional = true}
rustls-pemfile={version = "2.1.2", optional = true}
sha2 = { version = "0.10.8", optional = true }
hex = { version = "0.4.3", optional = true }


[dev-dependencies]
ubyte = "0.10.1"
clap = { version = "4.5.4", features = ['derive'] }
rustls = { workspace = true , features = ['ring']}
env_logger="0"

[package.metadata.deb]
features = ["bin"]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["target/release/ya-sb-router", "usr/bin/", "755"],
    ["debian/ya-sb-router.conf", "etc/", "644"]
]
conf-files = [
    "/etc/ya-sb-router.conf"
]
