[package]
name = "ya-sb-router"
version = "0.6.4"
description = "Service Bus Router"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-service-bus/crates/router"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "GPL-3.0"
edition = "2021"

[features]
default = []
tls = ['tokio-rustls', 'rustls', 'rustls-pemfile', 'sha2', "hex", 'ya-sb-util/with-tls']
bin = [
    'env_logger',
    'tokio/signal',
    'humantime',
    "log/release_max_level_debug",
    'clap/derive', "clap/env", "tls"
]

[lib]
name = "ya_sb_router"
path = "src/lib.rs"

[[bin]]
name = "ya-sb-router"
path = "src/bin.rs"
required-features = ['bin']

[dependencies]
ya-sb-proto = { version = "0.6", path = "../proto" }
ya-sb-util = { version = "0.5.1", features = ["with-writer"], path="../util" }
actix-rt = { workspace = true }
actix = { workspace = true, features = ["macros"] }
actix-server = { workspace = true }
actix-service = { workspace = true }
# Freeze actix_derive version, because switch to 0.6.1 violated semantic versioning.
actix_derive = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }

futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prost.workspace = true
tokio = { workspace = true, features = ["net", "sync", "macros", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = { workspace = true, features = ["sync"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
parking_lot = { workspace = true }
bitflags = { workspace = true }
pin-project = "1.0.7"
humantime = { workspace = true, optional = true }
env_logger = { version = "0.8", optional = true, default-features = false }
clap = { workspace = true, optional = true }
tokio-rustls = {  workspace = true, optional = true }
rustls = { workspace = true , optional = true}
rustls-pemfile={ workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }


[dev-dependencies]
ubyte = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rustls = { workspace = true , features = ['ring']}
env_logger="0"

[package.metadata.deb]
features = ["bin"]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["target/release/ya-sb-router", "usr/bin/", "755"],
    ["debian/ya-sb-router.conf", "etc/", "644"]
]
conf-files = [
    "/etc/ya-sb-router.conf"
]
