[package]
name = "ya-sb-util"
version = "0.4.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/ya-service-bus/crates/util"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description = "Golem Service Bus: API and Router common code"

[features]
default = []
with-bytes = ['bytes']
with-futures = ['pin-project', 'futures']
with-writer = ['actix', 'bitflags', 'futures']

[dependencies]
bytes = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
actix = { workspace = true, default-features = false, optional = true }
bitflags = { workspace = true, optional = true }
