[package]
name = "ya-sb-util"
version = "0.5.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/ya-service-bus/crates/util"
repository = "https://github.com/golemfactory/ya-service-bus"
license = "LGPL-3.0"
description = "Golem Service Bus: API and Router common code"

[features]
default = []
with-bytes = ['bytes']
with-futures = ['pin-project', 'futures']
with-writer = ['actix', 'bitflags', 'futures']
with-tls = ['rustls', "sha2", 'hex']

[dependencies]
bytes = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
pin-project = { version = "0.4", optional = true }
actix = { version = "0.13", default-features = false, optional = true }
bitflags = { version = "1.2.1", optional = true }

rustls = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
ring = "0.17.8"
